# FreeFlo

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SOLVER_DEPLOYMENT_GUIDE.md  docker-compose.yml  env.production.example
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
attestation/: Cargo.toml  env.example  env.testnet.example
attestation-service/: Cargo.toml  Dockerfile  README.md
attestation-service/src/: api.rs  auth.rs  chain.rs  main.rs  verification.rs
attestation/src/: attestation.rs  audit.rs  chain.rs  config.rs  eip712.rs  error.rs  main.rs
attestation/tests/: fiat_amount_validation_e2e.rs
contracts/: .env.example  README.md  env.example  foundry.toml
contracts/script/: DeployMainnet.s.sol  DeployRouter.s.sol  DeployV2.s.sol  DeployV3.s.sol  SetupSolverV2.s.sol
contracts/src/: OffRampV2.sol  OffRampV3.sol  PaymentVerifier.sol  VenmoToSepaRouter.sol
contracts/src/interfaces/: IPostIntentHook.sol
contracts/test/: OffRampV2.t.sol  PaymentVerifier.t.sol
deploy/attestation/: README.md  attestation.env.example  deploy-phase2.sh  setup-server.sh
deploy/attestation/caddy/: Caddyfile
deploy/attestation/nginx/: attestation.conf
deploy/attestation/systemd/: freeflo-attestation.service
docs/: ARCHITECTURE.md  ATTESTATION_SEPARATION_SPEC.md  ATTESTATION_SEPARATION_TODO.md  DEPLOYMENT.md  IMPROVEMENTS.md  OPERATIONS_RUNBOOK.md  README.md  SECURITY.md  SOLVER_ONBOARDING.md  VPS_DEPLOYMENT.md  cursor_back_to_work_prompt.md
docs/architecture/: intent-lifecycle.md  overview.md  zktls-verification.md
docs/guides/: quickstart.md  running-solver.md
docs/issues/: UNIFIED_ORACLE.md
frontend/: .env.example  README.md  env.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/venmo-to-sepa/: page.tsx
frontend/components/: Background.tsx  Footer.tsx  Header.tsx  OffRampForm.tsx  QuoteCard.tsx  VenmoToSepaFlow.tsx
frontend/components/offramp/: OfframpExecution.tsx  OfframpInput.tsx  OfframpWidget.tsx  QuoteCard.tsx  StepItem.tsx
frontend/hooks/: useApproveUSDC.ts  useCommitQuote.ts  useCreateIntent.ts  useExecuteOfframp.ts  useNetworkAddresses.ts  usePollFulfillment.ts  useQuotes.ts
frontend/lib/: contracts.ts  network.ts  quotes.ts  router-contracts.ts  theme.ts  wagmi.ts  zkp2p-contracts.ts
frontend/stores/: executionStore.ts  formStore.ts
nginx/: nginx.conf
providers/: README.md
providers/prover/: Cargo.toml
providers/qonto/: README.md
scripts/: deploy-vps.sh  expose-solver.sh  setup-solver.sh  setup-ssl.sh
solver/: .env.backup  .env.example  .gitignore  Dockerfile  README.md  env.example  package-lock.json  package.json  solver-config.example.json
solver/scripts/: cancel-intents.mjs  qonto-auth.mjs  qonto-auth.ts  qonto-get-accounts.mjs  qonto-oauth-simple.mjs  qonto-oauth.mjs  test-e2e-v3.mjs
solver/src/: config.ts  health.ts  index-v3.ts  index.ts  metrics.test.ts  metrics.ts  orchestrator-v3.ts  orchestrator.ts
solver/src/api/: quote-api.ts
solver/src/attestation/: client.ts  errors.test.ts  errors.ts  index.ts  prover.ts  types.ts
solver/src/chain/: abi-v3.ts  abi.ts  client-v3.ts  client.ts
solver/src/config/: solver-config.ts
solver/src/db/: intents.ts
solver/src/providers/: base.ts  index.ts  qonto-client.ts  qonto-types.ts  qonto.ts  registry.ts
solver/src/types/: index.ts
solver/src/utils/: logger.ts  retry.ts
test-solver/: attestation.env
tlsn/: Cargo.toml
tlsn/crates/examples/: Cargo.toml
tlsn/crates/examples/qonto/: present_transfer.rs  prove_transfer.rs
tlsn/qonto/: Cargo.toml
tlsn/qonto/src/: present_transfer.rs  prove_transfer.rs
(+1 files in other folders)
