[package]
name = "attestation-service"
version = "0.1.0"
edition = "2021"
description = "Attestation service for verifying TLSNotary proofs and signing EIP-712 attestations"

[dependencies]
# TLSNotary core libraries (from crates.io)
tlsn = "0.1.0-alpha.14"

# Web framework
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"

# Cryptography for EIP-712 signing
alloy-primitives = "0.8"
alloy-sol-types = "0.8"
k256 = { version = "0.13", features = ["ecdsa"] }

# Utilities
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
base64 = "0.22"
dotenvy = "0.15"
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }
