[workspace]
members = ["qonto"]
resolver = "2"

[workspace.dependencies]
tlsn = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.13" }
tlsn-formats = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.13" }
tokio = { version = "1.38", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
hyper = { version = "1.1", features = ["full"] }
http-body-util = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
hyper-util = { version = "0.1", features = ["full"] }
spansy = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "6168663" }
bincode = "1.3"
k256 = { version = "0.13", features = ["ecdsa"] }
urlencoding = "2.1"
dotenvy = "0.15"
