[package]
name = "qonto"
version = "0.1.0"
edition = "2021"

[dependencies]
tlsn = { workspace = true }
tlsn-formats = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
tokio-util = { workspace = true }
hyper-util = { workspace = true }
spansy = { workspace = true }
bincode = { workspace = true }
k256 = { workspace = true }
urlencoding = { workspace = true }
dotenvy = { workspace = true }

[[bin]]
name = "qonto_present_transfer"
path = "src/present_transfer.rs"

[[bin]]
name = "qonto_prove_transfer"
path = "src/prove_transfer.rs"
